SERVER-90714 Make $_internalAllCollectionStats ignore no-longer-existing collections (#22399)

GitOrigin-RevId: 651ce81592c3d04dc78e55de07a2969f8e30054f